fixed overlapping tournament w/ alert issue

--- a/frontend/public/css/components/alert.css
+++ b/frontend/public/css/components/alert.css
@@ -1,3 +1,7 @@
+.alert-container {
+	z-index: 999;
+}
+
 .alert {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 320px;
@@ -10,6 +14,7 @@
     box-shadow: 0px 0px 5px -3px #111;
     margin-bottom: 8px;
     position: relative; /* Ensure proper positioning of close button */
+	z-index: 999;
   }
   
   .alert__icon {
