--- a/frontend/public/css/components/video.css
+++ b/frontend/public/css/components/video.css
@@ -16,8 +16,3 @@ video {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
-.container-fluid {
-    position: relative;
-    z-index: 1;
-}
